--- a/parameter_deduplication/parameter_deduplication.ipynb
+++ b/parameter_deduplication/parameter_deduplication.ipynb
@@ -10,9 +10,13 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": 3
+   "version": "3.7.10"
   },
-  "orig_nbformat": 2
+  "orig_nbformat": 2,
+  "kernelspec": {
+   "name": "python3710jvsc74a57bd071c5b331e9b3fc66f0b5966d68a7b1fc99a3faecdcba5219fedfb77c3376db74",
+   "display_name": "Python 3.7.10 64-bit"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2,
@@ -52,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,12 +66,265 @@
     "from simtk import openmm\n",
     "from simtk.openmm import app, unit, XmlSerializer, LangevinIntegrator\n",
     "from simtk.openmm.app import NoCutoff, HBonds\n",
-    "from utils import fix_carboxylate_bond_orders\n",
-    "import os\n",
+    "import os, sys\n",
     "import itertools\n",
     "import time\n",
-    "from pathlib import Path"
+    "from pathlib import Path\n",
+    "from rdkit import Chem\n",
+    "from rdkit.Chem import rdFMCS\n",
+    "from networkx.algorithms.isomorphism import GraphMatcher\n",
+    "\n",
+    "cdir = Path.cwd()\n",
+    "sys.path.append(str(cdir.parents[0]))\n",
+    "from utils import fix_carboxylate_bond_orders\n",
+    "from amberimpropertorsionhandler import AmberImproperTorsionHandler\n",
+    "\n",
+    "# create the forcefield\n",
+    "ff = ForceField('test.offxml', 'test_backbone.offxml')"
    ]
+  },
+  {
+   "source": [
+    "## Define function that will compare smirks:\n",
+    "'smirks_are_equivalent`: returns True if smirks are chemically equivalent, False else\n",
+    "\n",
+    "'isomorphic_test`: used by `smirks_are_equivalent` to do the isomorphism test using networkx "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def isomorphic_test(qmol1, qmol2):\n",
+    "\n",
+    "    # Build the user defined matching functions\n",
+    "    def node_match_func(x, y):\n",
+    "        is_equal = x[\"atomic_number\"] == y[\"atomic_number\"]\n",
+    "        is_equal &= x[\"is_aromatic\"] == y[\"is_aromatic\"]\n",
+    "        is_equal &= x[\"formal_charge\"] == y[\"formal_charge\"]\n",
+    "        is_equal &= x[\"stereochemistry\"] == y[\"stereochemistry\"]\n",
+    "        is_equal &= x[\"atom_map_num\"] == y[\"atom_map_num\"]\n",
+    "        return is_equal\n",
+    "\n",
+    "    def edge_match_func(x, y):\n",
+    "        is_equal = (x[\"is_aromatic\"] == y[\"is_aromatic\"]) or (\n",
+    "            x[\"bond_order\"] == y[\"bond_order\"]\n",
+    "        )\n",
+    "        is_equal &= x[\"stereochemistry\"] == y[\"stereochemistry\"]\n",
+    "        return is_equal\n",
+    "\n",
+    "    # Here we should work out what data type we have, also deal with lists?\n",
+    "    def qmol_to_networkx(qmol):\n",
+    "        try:\n",
+    "            import networkx as nx\n",
+    "            from networkx.algorithms.isomorphism import GraphMatcher\n",
+    "        except ImportError as e:\n",
+    "            print(e)\n",
+    "            print(\"networkx import error in reduce_forcefield()\")\n",
+    "            return None\n",
+    "        G = nx.Graph()\n",
+    "        for atom in qmol.GetAtoms():\n",
+    "            G.add_node(\n",
+    "                atom.GetIdx(),\n",
+    "                atomic_number=atom.GetAtomicNum(),\n",
+    "                is_aromatic=atom.GetIsAromatic(),\n",
+    "                stereochemistry=atom.GetChiralTag(),\n",
+    "                formal_charge=atom.GetFormalCharge(),\n",
+    "                atom_map_num=(atom.GetAtomMapNum() != 0),\n",
+    "            )\n",
+    "        for bond in qmol.GetBonds():\n",
+    "            G.add_edge(\n",
+    "                bond.GetBeginAtomIdx(),\n",
+    "                bond.GetEndAtomIdx(),\n",
+    "                bond_order=bond.GetBondType(),\n",
+    "                is_aromatic=bond.GetIsAromatic(),\n",
+    "                stereochemistry=bond.GetStereo(),\n",
+    "            )\n",
+    "        return G\n",
+    "\n",
+    "    mol1_netx = qmol_to_networkx(qmol1)\n",
+    "    mol2_netx = qmol_to_networkx(qmol2)\n",
+    "\n",
+    "    GM = GraphMatcher(\n",
+    "        mol1_netx, mol2_netx, node_match=node_match_func, edge_match=edge_match_func\n",
+    "    )\n",
+    "    isomorphic = GM.is_isomorphic()\n",
+    "\n",
+    "    return isomorphic\n",
+    "\n",
+    "def smirks_are_equivalent(smirks1, smirks2, error_flagging=False, method='all'):\n",
+    "    \"\"\"\n",
+    "    sm1: smirks string 1\n",
+    "    sm2: smirks string 2\n",
+    "    error_flagging: False to return only bool result, True to print basis debugging info\n",
+    "    method: MCS for maximum substructure comparison,\n",
+    "            ISO for isomorphism comparison,\n",
+    "            all to use all comparison methods at once\n",
+    "    returns: True if sm1 and sm2 are equivalent, False else\n",
+    "    \"\"\"\n",
+    "\n",
+    "    mcs_equivalent = True\n",
+    "    isomorph_equivalent = True\n",
+    "    if method == 'MCS' or method == 'all':\n",
+    "        # implement maximum common substructure check\n",
+    "        qmol1 = Chem.MolFromSmarts(smirks1)\n",
+    "        qmol2 = Chem.MolFromSmarts(smirks2)\n",
+    "\n",
+    "        mapped_idx_multiple = 300 # arbitrary multiple to distiguish mapped atoms\n",
+    "        for at_idx, at in enumerate(qmol1.GetAtoms()):\n",
+    "            map_num = at.GetAtomMapNum()\n",
+    "            if map_num != 0:\n",
+    "                at.SetIsotope(mapped_idx_multiple * map_num + int(at.GetAtomicNum()))\n",
+    "            else:\n",
+    "                at.SetIsotope(int(at.GetAtomicNum()))\n",
+    "                pass\n",
+    "\n",
+    "        for at_idx, at in enumerate(qmol2.GetAtoms()):\n",
+    "            map_num = at.GetAtomMapNum()\n",
+    "            if map_num != 0:\n",
+    "                at.SetIsotope(mapped_idx_multiple * map_num + int(at.GetAtomicNum()))\n",
+    "            else:\n",
+    "                at.SetIsotope(int(at.GetAtomicNum()))\n",
+    "                pass\n",
+    "        res=rdFMCS.FindMCS([qmol1, qmol2], atomCompare=(rdFMCS.AtomCompare.CompareIsotopes))\n",
+    "        # is the mcs structure just as large as the two smarts structures\n",
+    "        mcs_equivalent = (res.numAtoms == qmol1.GetNumAtoms() == qmol2.GetNumAtoms())\n",
+    "    if method == 'ISO' or method == 'all':\n",
+    "        # implement isomorphism check similar to Molecule.are_isomorphic()\n",
+    "        qmol1 = Chem.MolFromSmarts(smirks1)\n",
+    "        qmol2 = Chem.MolFromSmarts(smirks2)\n",
+    "\n",
+    "        isomorph_equivalent = isomorphic_test(qmol1, qmol2)\n",
+    "\n",
+    "\n",
+    "    if error_flagging:\n",
+    "        if mcs_equivalent and isomorph_equivalent:\n",
+    "            print(\"smirks found to be equivalent\")\n",
+    "        else:\n",
+    "            print(\"smirks found not to be equivalent\")\n",
+    "            print(f\"\\tmcs_equivalent: {mcs_equivalent}\\tisomorph_equivalent: {isomorph_equivalent}\")\n",
+    "            print(\"Mass info compared by rdFMCS:\")\n",
+    "            print([at.GetIsotope() for at in qmol1.GetAtoms()])\n",
+    "            print([at.GetIsotope() for at in qmol2.GetAtoms()])\n",
+    "            print(\"res map:\")\n",
+    "            print(res.smartsString)\n",
+    "\n",
+    "    return (mcs_equivalent and isomorph_equivalent)"
+   ]
+  },
+  {
+   "source": [
+    "## Delete all identical parameters \n",
+    "This step takes a considerable amount of time. Skip this step and use the provided `reduced.offxml` if you do not want to be sitting around for a few hours. This step could be completed in less than a minute if you assume that only parameters right next to each other will ever return as equivalent. However, testing showed that comparing over the entire list of smirks caught a few extra redundant parameters than comparing only adjacent smirks. "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "removed  1290\n",
+      "removed  1283\n",
+      "removed  1282\n"
+     ]
+    },
+    {
+     "output_type": "error",
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-16-94ee0a30c762>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     39\u001b[0m                 \u001b[0mcomparison_method\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"all\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     40\u001b[0m                 \u001b[0;31m# this is the actual comparison:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 41\u001b[0;31m                 \u001b[0;32mif\u001b[0m \u001b[0msmirks_are_equivalent\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparam_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'smirks'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprevious_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'smirks'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmethod\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcomparison_method\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     42\u001b[0m                     \u001b[0;32mif\u001b[0m \u001b[0mequal_values\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     43\u001b[0m                         \u001b[0mredundant_params\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'id'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-15-41c04ec9d6bc>\u001b[0m in \u001b[0;36msmirks_are_equivalent\u001b[0;34m(smirks1, smirks2, error_flagging, method)\u001b[0m\n\u001b[1;32m     98\u001b[0m         \u001b[0mqmol2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mChem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mMolFromSmarts\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msmirks2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     99\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 100\u001b[0;31m         \u001b[0misomorph_equivalent\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0misomorphic_test\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mqmol1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mqmol2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    101\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    102\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-15-41c04ec9d6bc>\u001b[0m in \u001b[0;36misomorphic_test\u001b[0;34m(qmol1, qmol2)\u001b[0m\n\u001b[1;32m     46\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mG\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     47\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 48\u001b[0;31m     \u001b[0mmol1_netx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mqmol_to_networkx\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mqmol1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     49\u001b[0m     \u001b[0mmol2_netx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mqmol_to_networkx\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mqmol2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     50\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-15-41c04ec9d6bc>\u001b[0m in \u001b[0;36mqmol_to_networkx\u001b[0;34m(qmol)\u001b[0m\n\u001b[1;32m     27\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m         \u001b[0mG\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mGraph\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 29\u001b[0;31m         \u001b[0;32mfor\u001b[0m \u001b[0matom\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mqmol\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mGetAtoms\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     30\u001b[0m             G.add_node(\n\u001b[1;32m     31\u001b[0m                 \u001b[0matom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mGetIdx\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "# attempt to find redundant params in all registered handlers \n",
+    "for parameter_tag in ff.registered_parameter_handlers:\n",
+    "    # skip if the registered paramter does not have many parameters \n",
+    "    if len(ff[parameter_tag].parameters) <= 1:\n",
+    "        continue\n",
+    "    # dictionary to store redundant parameters to later delete\n",
+    "    redundant_params = {'id': [], 'smirks': []}\n",
+    "\n",
+    "    # will start from the bottom of the list and move upwards, since this is how parameterization generally works \n",
+    "    for i in range(len(ff[parameter_tag].parameters) - 1, -1, -1): # decrement i from max param down to 0\n",
+    "        # no need to delete the same id twice\n",
+    "        if i in redundant_params['id']:\n",
+    "            continue\n",
+    "\n",
+    "        param = ff[parameter_tag].parameters[i]\n",
+    "        param_dict = param.to_dict()\n",
+    "        \n",
+    "        # compare to all other parameters in the list\n",
+    "        for j in range(i-1, -1, -1):  # compare to all params that are above i \n",
+    "            if j in redundant_params['id']:\n",
+    "                continue\n",
+    "\n",
+    "            previous = ff[parameter_tag].parameters[j]\n",
+    "            previous_dict = previous.to_dict()\n",
+    "            if param_dict.keys() != previous_dict.keys():\n",
+    "                continue\n",
+    "            # check if all params are equal\n",
+    "            equal_values = False\n",
+    "            for key in param_dict:\n",
+    "                if key in ['id', 'smirks']:\n",
+    "                    continue\n",
+    "                if param_dict[key] != previous_dict[key]:\n",
+    "                    equal_values = False\n",
+    "                    break\n",
+    "                else:\n",
+    "                    equal_values = True\n",
+    "            \n",
+    "            try:\n",
+    "                comparison_method = \"all\"\n",
+    "                # this is the actual comparison:\n",
+    "                if smirks_are_equivalent(param_dict['smirks'], previous_dict['smirks'], method=comparison_method):\n",
+    "                    if equal_values:\n",
+    "                        redundant_params['id'].append(j)\n",
+    "                        redundant_params['smirks'].append(previous_dict['smirks'])\n",
+    "                        print(\"removed \", j)\n",
+    "                    else:\n",
+    "                        print(f\"equivalent smirks but different paramter info for: \\\n",
+    "                                \\n {param_dict['smirks']} \\n {previous_dict['smirks']} \\n \\\n",
+    "                                this is considered a critical error\")\n",
+    "                        smirks_are_equivalent(param_dict['smirks'], previous_dict['smirks'], error_flagging=True, method=comparison_method)\n",
+    "            except Exception:\n",
+    "                print(f'some error occured for {param}')\n",
+    "\n",
+    "    for smirks in redundant_params['smirks']:\n",
+    "        del ff.get_parameter_handler(parameter_tag).parameters[smirks]\n",
+    "    print(f\"Kept {len(ff[parameter_tag].parameters)} params, removed \", end=\"\")\n",
+    "    print(len(redundant_params['smirks']))\n",
+    "    assert(len(redundant_params['smirks']) == len(redundant_params['id']))\n",
+    "\n",
+    "# will load this file in the testing steps\n",
+    "ff.to_file('reduced.offxml')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
