--- a/parameter_deduplication/parameter_deduplication.ipynb
+++ b/parameter_deduplication/parameter_deduplication.ipynb
@@ -57,17 +57,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": [
-      "Warning: Unable to load toolkit 'AmberTools'. \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from openff.toolkit.topology import Molecule, Topology\n",
     "from openff.toolkit.typing.engines.smirnoff import ForceField\n",
@@ -104,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1783,6 +1775,195 @@
     "\n",
     "# will load this file in the testing steps\n",
     "ff.to_file('reduced.offxml')"
+   ]
+  },
+  {
+   "source": [
+    "# Run ALA_ALA test"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Data from original forcefield\n",
+      "Making the topology took: 0.002240419387817383 seconds\n",
+      "\u001b[96mMaking the system took: 5.514427423477173 seconds \u001b[0m\n",
+      "Calulating the Energy\n",
+      "Calculating AMBER energy\n",
+      "HarmonicBondForce 2.3155743117870053 kJ/mol\n",
+      "HarmonicAngleForce 3.4303884124628112 kJ/mol\n",
+      "PeriodicTorsionForce 63.147615222493215 kJ/mol\n",
+      "NonbondedForce -127.32412395002014 kJ/mol\n",
+      "-58.4305460032771 kJ/mol\n",
+      "Calculating OFF energy\n",
+      "HarmonicAngleForce 3.430373023149487 kJ/mol\n",
+      "HarmonicBondForce 2.3155743117870045 kJ/mol\n",
+      "NonbondedForce -127.32432276182345 kJ/mol\n",
+      "PeriodicTorsionForce 63.147621006650816 kJ/mol\n",
+      "Energy calculated. Previous step took 0.010646343231201172\n",
+      "-58.43075442023615 kJ/mol\n",
+      "Data from reduced forcefield\n",
+      "Making the topology took: 0.002476930618286133 seconds\n",
+      "\u001b[96mMaking the system took: 4.4330549240112305 seconds \u001b[0m\n",
+      "Calulating the Energy\n",
+      "Calculating AMBER energy\n",
+      "HarmonicBondForce 2.3155743117870053 kJ/mol\n",
+      "HarmonicAngleForce 3.4303884124628112 kJ/mol\n",
+      "PeriodicTorsionForce 63.147615222493215 kJ/mol\n",
+      "NonbondedForce -127.32412395002014 kJ/mol\n",
+      "-58.4305460032771 kJ/mol\n",
+      "Calculating OFF energy\n",
+      "HarmonicAngleForce 3.430373023149487 kJ/mol\n",
+      "HarmonicBondForce 2.3155743117870045 kJ/mol\n",
+      "NonbondedForce -127.32432276182345 kJ/mol\n",
+      "PeriodicTorsionForce 63.147621006650816 kJ/mol\n",
+      "Energy calculated. Previous step took 0.012837409973144531\n",
+      "-58.43075442023615 kJ/mol\n"
+     ]
+    }
+   ],
+   "source": [
+    "def forcefield_example(forcefield, molecule, amber_struct):\n",
+    "    def calc_energy(omm_sys, omm_top, coords):\n",
+    "        omm_idx_to_force = {}\n",
+    "        for idx, force in enumerate(omm_sys.getForces()):\n",
+    "            force.setForceGroup(idx)\n",
+    "            omm_idx_to_force[idx] = str(type(force).__name__)\n",
+    "\n",
+    "        omm_integrator = LangevinIntegrator(300*unit.kelvin,\n",
+    "                                    1/unit.picosecond,\n",
+    "                                    0.002*unit.picoseconds)\n",
+    "        omm_simulation = app.Simulation(omm_top, omm_sys, omm_integrator)\n",
+    "        #simulation.context.setPositions(positions)\n",
+    "        omm_simulation.context.setPositions(coords)\n",
+    "\n",
+    "        for group in omm_idx_to_force.keys():\n",
+    "            omm_energy = omm_simulation.context.getState(getEnergy=True,groups={group}).getPotentialEnergy()\n",
+    "            print(omm_idx_to_force[group], omm_energy)\n",
+    "\n",
+    "        omm_energy = omm_simulation.context.getState(getEnergy=True).getPotentialEnergy()\n",
+    "        return omm_energy\n",
+    "    \n",
+    "    fix_carboxylate_bond_orders(molecule)\n",
+    "    # print(molecule.to_smiles())\n",
+    "    print(f'Making the topology took: ', end='')\n",
+    "    start = time.time()\n",
+    "    off_top = Molecule.to_topology(molecule)\n",
+    "\n",
+    "    print(f'{time.time()-start} seconds')\n",
+    "    print(f'{colors.OKCYAN}Making the system took: ', end='')\n",
+    "    start = time.time()\n",
+    "    off_sys = forcefield.create_openmm_system(molecule.to_topology(),)\n",
+    "    with open('off_sys.xml','w') as of:\n",
+    "        of.write(XmlSerializer.serialize(off_sys))\n",
+    "    print(f'{time.time()-start} seconds {colors.ENDC}')\n",
+    "    print(f'Calulating the Energy')\n",
+    "    start = time.time()\n",
+    "\n",
+    "    amber_system = amber_struct.createSystem(nonbondedMethod=NoCutoff,\n",
+    "                                        #nonbondedCutoff=9.0*unit.angstrom,\n",
+    "                                        #constraints=HBonds,\n",
+    "                                        removeCMMotion=False)\n",
+    "\n",
+    "    amber_top = amber_struct.topology\n",
+    "    print('Calculating AMBER energy')\n",
+    "    amber_energy = calc_energy(amber_system,\n",
+    "                            amber_top,\n",
+    "                            amber_struct.positions)\n",
+    "    print(amber_energy)\n",
+    "    print('Calculating OFF energy')\n",
+    "    off_energy = calc_energy(off_sys, off_top, amber_struct.positions)\n",
+    "    print(f'Energy calculated. Previous step took {time.time()-start}')\n",
+    "    start = time.time()\n",
+    "    print(off_energy)\n",
+    "\n",
+    "ff = ForceField('test.offxml', 'test_backbone.offxml')\n",
+    "ff_reduced = ForceField('reduced.offxml', 'test_backbone.offxml')\n",
+    "\n",
+    "mol = Molecule.from_file(f'ALA_ALA/ALA_ALA.mol2')\n",
+    "amber_struct = ParmEd.load_file('ALA_ALA/ALA_ALA.prmtop', 'ALA_ALA/ALA_ALA.inpcrd')\n",
+    "\n",
+    "class colors:\n",
+    "    OKCYAN = '\\033[96m'\n",
+    "    ENDC = '\\033[0m'\n",
+    "    BOLD = '\\033[1m'\n",
+    "    UNDERLINE = '\\033[4m'\n",
+    "\n",
+    "print('Data from original forcefield')\n",
+    "forcefield_example(ff, mol, amber_struct)\n",
+    "print('Data from reduced forcefield')\n",
+    "forcefield_example(ff_reduced, mol, amber_struct)"
+   ]
+  },
+  {
+   "source": [
+    "# Run T4 protein test"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Data from original forcefield\n",
+      "Making the topology took: 1.1377336978912354 seconds\n",
+      "\u001b[96mMaking the system took: 1121.5865364074707 seconds \u001b[0m\n",
+      "Calulating the Energy\n",
+      "Calculating AMBER energy\n",
+      "HarmonicBondForce 2301.831678423524 kJ/mol\n",
+      "HarmonicAngleForce 5322.401563594299 kJ/mol\n",
+      "PeriodicTorsionForce 8839.21515881361 kJ/mol\n",
+      "NonbondedForce -27222.85228914988 kJ/mol\n",
+      "-10759.403888318448 kJ/mol\n",
+      "Calculating OFF energy\n",
+      "HarmonicAngleForce 5322.40450716563 kJ/mol\n",
+      "HarmonicBondForce 2301.831678423505 kJ/mol\n",
+      "NonbondedForce -27222.861328443923 kJ/mol\n",
+      "PeriodicTorsionForce 8837.309940980263 kJ/mol\n",
+      "Energy calculated. Previous step took 0.41809725761413574\n",
+      "-10761.315201874531 kJ/mol\n",
+      "Data from reduced forcefield\n",
+      "Making the topology took: 0.38121461868286133 seconds\n",
+      "\u001b[96mMaking the system took: 890.0445828437805 seconds \u001b[0m\n",
+      "Calulating the Energy\n",
+      "Calculating AMBER energy\n",
+      "HarmonicBondForce 2301.831678423524 kJ/mol\n",
+      "HarmonicAngleForce 5322.401563594299 kJ/mol\n",
+      "PeriodicTorsionForce 8839.21515881361 kJ/mol\n",
+      "NonbondedForce -27222.852289149865 kJ/mol\n",
+      "-10759.403888318448 kJ/mol\n",
+      "Calculating OFF energy\n",
+      "HarmonicAngleForce 5322.40450716563 kJ/mol\n",
+      "HarmonicBondForce 2301.831678423505 kJ/mol\n",
+      "NonbondedForce -27222.861328443938 kJ/mol\n",
+      "PeriodicTorsionForce 8837.309940980263 kJ/mol\n",
+      "Energy calculated. Previous step took 0.3964505195617676\n",
+      "-10761.315201874524 kJ/mol\n"
+     ]
+    }
+   ],
+   "source": [
+    "mol = Molecule.from_file(f't4.mol2')\n",
+    "amber_struct = ParmEd.load_file('t4.prmtop', 't4.inpcrd')\n",
+    "\n",
+    "print('Data from original forcefield')\n",
+    "forcefield_example(ff, mol, amber_struct)\n",
+    "print('Data from reduced forcefield')\n",
+    "forcefield_example(ff_reduced, mol, amber_struct)"
    ]
   },
   {
