--- a/parameter_deduplication/parameter_deduplication.ipynb
+++ b/parameter_deduplication/parameter_deduplication.ipynb
@@ -90,9 +90,9 @@
    "metadata": {},
    "source": [
     "## Define function that will compare smirks:\n",
-    "'smirks_are_equivalent`: returns True if smirks are chemically equivalent, False else\n",
+    "`smirks_are_equivalent`: returns True if smirks are chemically equivalent, False else\n",
     "\n",
-    "'isomorphic_test`: used by `smirks_are_equivalent` to do the isomorphism test using networkx "
+    "`isomorphic_test`: used by `smirks_are_equivalent` to do the isomorphism test using networkx "
    ]
   },
   {
@@ -154,6 +154,8 @@
     "\n",
     "    return isomorphic\n",
     "\n",
+    "\n",
+    "# Set up caches to improve runtime\n",
     "smirks2iso_qmol = dict()\n",
     "smirks2mol_netx = dict()\n",
     "\n",
@@ -175,6 +177,7 @@
     "        # implement maximum common substructure check\n",
     "        mapped_idx_multiple = 300 # arbitrary multiple to distiguish mapped atoms\n",
     "        \n",
+    "        # Use smirks2iso_qmol cache to improve runtime\n",
     "        if smirks1 not in smirks2iso_qmol:\n",
     "            qmol1 = Chem.MolFromSmarts(smirks1)\n",
     "            for at_idx, at in enumerate(qmol1.GetAtoms()):\n",
@@ -186,7 +189,7 @@
     "                    pass\n",
     "            smirks2iso_qmol[smirks1] = qmol1\n",
     "\n",
-    "\n",
+    "        # Use smirks2iso_qmol cache to improve runtime\n",
     "        if smirks2 not in smirks2iso_qmol:\n",
     "            qmol2 = Chem.MolFromSmarts(smirks2)\n",
     "            for at_idx, at in enumerate(qmol2.GetAtoms()):\n",
@@ -200,6 +203,8 @@
     "\n",
     "        qmol1 = smirks2iso_qmol[smirks1]            \n",
     "        qmol2 = smirks2iso_qmol[smirks2]\n",
+    "        \n",
+    "        # Check to see if there's a different number of atoms before doing more expensive checks\n",
     "        if qmol1.GetNumAtoms() != qmol2.GetNumAtoms():\n",
     "            return False\n",
     "        \n",
@@ -261,7 +266,7 @@
     }
    ],
    "source": [
-    "%load_ext snakeviz"
+    "#%load_ext snakeviz"
    ]
   },
   {
@@ -449,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -457,36 +462,36 @@
      "output_type": "stream",
      "text": [
       "Data from original forcefield\n",
-      "Making the topology took: 0.0014030933380126953 seconds\n",
-      "\u001b[96mMaking the system took: 1.76125168800354 seconds \u001b[0m\n",
+      "Making the topology took: 0.0019271373748779297 seconds\n",
+      "\u001b[96mMaking the system took: 1.989522933959961 seconds \u001b[0m\n",
       "Calulating the Energy\n",
       "Calculating OFF energy\n",
       "HarmonicAngleForce 3.4303138256073 kJ/mol\n",
       "HarmonicBondForce 2.315783977508545 kJ/mol\n",
       "NonbondedForce -127.324462890625 kJ/mol\n",
       "PeriodicTorsionForce 63.14761734008789 kJ/mol\n",
-      "Energy calculated. Previous step took 0.9140901565551758\n",
+      "Energy calculated. Previous step took 1.3446311950683594\n",
       "-58.43072509765625 kJ/mol\n",
       "Data from reduced forcefield\n",
-      "Making the topology took: 0.0018029212951660156 seconds\n",
-      "\u001b[96mMaking the system took: 1.4673080444335938 seconds \u001b[0m\n",
+      "Making the topology took: 0.0018842220306396484 seconds\n",
+      "\u001b[96mMaking the system took: 1.4324681758880615 seconds \u001b[0m\n",
       "Calulating the Energy\n",
       "Calculating OFF energy\n",
       "HarmonicAngleForce 3.4303138256073 kJ/mol\n",
       "HarmonicBondForce 2.315783977508545 kJ/mol\n",
       "NonbondedForce -127.324462890625 kJ/mol\n",
       "PeriodicTorsionForce 63.14761734008789 kJ/mol\n",
-      "Energy calculated. Previous step took 0.8436930179595947\n",
+      "Energy calculated. Previous step took 0.8030462265014648\n",
       "-58.43072509765625 kJ/mol\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(Quantity(value=-58.43072509765625, unit=kilojoule/mole), 1.4673080444335938)"
+       "(Quantity(value=-58.43072509765625, unit=kilojoule/mole), 1.4324681758880615)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,8 +550,9 @@
     "ff = ForceField('test.offxml', 'test_backbone.offxml')\n",
     "ff_reduced = ForceField('reduced.offxml', 'test_backbone.offxml')\n",
     "\n",
-    "mol = Molecule.from_file(f'ALA_ALA/ALA_ALA.mol2')\n",
-    "amber_struct = ParmEd.load_file('ALA_ALA/ALA_ALA.prmtop', 'ALA_ALA/ALA_ALA.inpcrd')\n",
+    "mol = Molecule.from_file(f'../MainChain/ALA_ALA/ALA_ALA.mol2')\n",
+    "amber_struct = ParmEd.load_file('../MainChain/ALA_ALA/ALA_ALA.prmtop', \n",
+    "                                '../MainChain/ALA_ALA/ALA_ALA.inpcrd')\n",
     "\n",
     "class colors:\n",
     "    OKCYAN = '\\033[96m'\n",
@@ -664,7 +670,7 @@
     }
    ],
    "source": [
-    "os.chdir('/Users/jeffreywagner/projects/OpenForceField/amber-ff-porting/parameter_deduplication')\n",
+    "#os.chdir('/Users/jeffreywagner/projects/OpenForceField/amber-ff-porting/parameter_deduplication')\n",
     "\n",
     "ff = ForceField('test.offxml', 'test_backbone.offxml')\n",
     "ff_reduced = ForceField('reduced.offxml')\n",
@@ -939,7 +945,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Make off_impropers version of FF"
+    "# Make off_impropers version of FF\n",
+    "\n",
+    "Instead of using the `AmberImproperTorsion` type, future work at OpenFF on protein force fields will use the \"OpenFF-style\" `ImproperTorsion` type. The differences are that:\n",
+    "\n",
+    "1. In OpenFF impropers, the second atom is the central one. In AMBER-style impropers, the third atom is the central one.\n",
+    "2. `AmberImproperTorsion`s are applied in a one-fold manner (that is, the improper angle is measured using one specific ordering of the 4 atoms comprising the improper), whereas OpenFF-style `ImproperTorsion`s are applied in a three-fold manner, which avoids issues of ordering. For more information see the [ImproperTorsions section of the SMIRNOFF specification](https://openforcefield.github.io/standards/standards/smirnoff/#impropertorsions)\n",
+    "\n",
+    "These differences mean that 1) to convert parameters from Amber-style to OpenFF-style, the second and third atoms in each SMIRKS pattern need to be switched and 2) even after that we should expect a small energy difference owing to the different ways of measuring the improper angle. "
    ]
   },
   {
@@ -957,7 +970,11 @@
    ],
    "source": [
     "import tqdm\n",
-    "os.chdir('/Users/jeffreywagner/projects/OpenForceField/amber-ff-porting/parameter_deduplication')\n",
+    "# If you're running this from top to bottom, one of the previous cells \n",
+    "# will have gone up one directory, so here we go back down one. You may \n",
+    "# need to change this if you run the notebook in a different order or \n",
+    "# repeat execution of cells.\n",
+    "os.chdir('parameter_deduplication')\n",
     "\n",
     "ff = ForceField('reduced.offxml')\n",
     "ih = ff.get_parameter_handler('ImproperTorsions')\n",
@@ -975,6 +992,13 @@
     "\n",
     "ff.deregister_parameter_handler('AmberImproperTorsions')\n",
     "ff.to_file('reduced_off_impropers.offxml')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Measure energy deviation that arises as a result of using trefoil (\"OFF\") impropers instead of one-fold (\"AMBER\")."
    ]
   },
   {
@@ -1031,6 +1055,13 @@
     "forcefield_example(ff_reduced, mol, amber_struct)\n",
     "print('Data from reduced_off_impropers forcefield')\n",
     "forcefield_example(ff_off_impropers, mol, amber_struct)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As expected, all of the energy components match to high precision, except that `PeriodicTorsionForce` has a disagreement of about 5.5 kJ/mol. The loaded protein has about 164 residues, so this translates to a per-residue disagreement of about 0.034 kJ/(mol residue), or a relative error in total energy of 5e-4."
    ]
   },
   {
